--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "claude"
   ],
   "author": "",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "dependencies": {
     "@octokit/rest": "^19.0.11",
     "express": "^4.18.2",
