--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pair-review",
+  "name": "@in-the-loop-labs/pair-review",
   "version": "1.0.0",
   "description": "Your AI-powered code review partner - Close the feedback loop with AI coding agents",
   "main": "src/server.js",
