--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Your AI-powered code review partner - Close the feedback loop with AI coding agents",
   "main": "src/server.js",
   "bin": {
-    "pair-review": "./bin/pair-review.js",
-    "git-diff-lines": "./bin/git-diff-lines"
+    "pair-review": "bin/pair-review.js",
+    "git-diff-lines": "bin/git-diff-lines"
   },
   "files": [
     "bin/",
